FIX: [rubriche] cover were displayed not centered

--- a/css/awesome-lahar.css
+++ b/css/awesome-lahar.css
@@ -687,6 +687,8 @@ input[type="search"]::-webkit-search-results-decoration {
     overflow: hidden;
     height: 100%;
     position: relative;
+    background-size: cover;
+    background-position: center 0;
 }
 
 @media only screen and (max-width: 780px) {
